# pokemon-rs

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  launch.sh  openapi.yaml  package.json  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md
.agents/: API_VERSIONING.md  ARCHITECTURE.md  CONTRACTS.md  DATASTORE.md  PRD_BACKEND.md  PRD_CLI.md
.agents/ci/: CI-README.md
.claude/: settings.local.json
.cursor/commands/: initphase.md
.cursor/rules/: .session_cursor.mdc  backend.mdc  frontend.mdc  root.mdc  tasks.mdc  testing.mdc
.github/workflows/: ci-cd-agentic.yaml
agents/: README.md  contract-openapi.test.ts  eslint.config.js  index.ts  package.json  ts-client.test.ts
agents/e2e/: backend.test.ts
agents/game_interaction_orchestrator/: index.ts  orchestrator.test.ts  orchestrator.ts
agents/rl_model_runner/: adapt.test.ts  adapt.ts  export.test.ts  export.ts  index.ts  infer.test.ts  (+6 more)
cli/: Cargo.toml
cli/src/: config.rs  error.rs  main.rs  server.rs
controller/: Cargo.toml
controller/src/: api.rs  app_state.rs  auth.rs  event_store.rs  lib.rs  metrics.rs  ratelimit.rs
controller/src/fingerprinter/: extraction.rs  mod.rs  store.rs
controller/src/game_session_manager/: mod.rs
controller/src/persistence_metrics/: mod.rs
controller/src/rl_feedback_loop/: experience.rs  export.rs  mod.rs  reward.rs  store.rs
controller/src/simulator_human_proxy/: mod.rs
controller/src/state_engine/: mod.rs
database/: README.md  run_migrations.sh  verify_schema.sh
docker/: Dockerfile.api  Dockerfile.api.dev  Dockerfile.frontend  Dockerfile.frontend.dev  nginx.conf
docs/: INTEGRATION_GUIDE.md  README.md  docs.json  getting-started.mdx  intro.mdx
frontend/: index.html  package.json  vite.config.ts  vitest.config.ts
scripts/: codegen-ts-client.sh  rl_export_train.py  validate-docs-structure.ts
tasks/: INSTRUCTIONS.md  PRD.md  bridge.md  errors.md
ts-agents/: package.json
(+130 files in other folders)
