[package]
name = "pokemon-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the gaming fingerprinting system"

[dependencies]
sqlx = { workspace = true }
dotenvy = { workspace = true }
controller = { path = "../controller" }
uuid = { version = "1", features = ["v4", "serde"] }
axum = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
http-body-util = "0.1"
http = "1.0"
tower = { version = "0.4", features = ["util"] }
